--- a/doc/helix2solv.1
+++ b/doc/helix2solv.1
@@ -34,7 +34,7 @@ helix2solv \- convert legacy helixcode format into a solv file
 \fBhelix2solv\fR
 .SH "DESCRIPTION"
 .sp
-The helix format was a metadata format used in the RedCarpet package manager\&. It\(cqs still used in libzypp testcases\&. The helix2solv tool reads data in helix format from standhard input and write it in solv file format to standard output\&.
+The helix format was a metadata format used in the RedCarpet package manager\&. It\(cqs still used in libzypp testcases\&. The helix2solv tool reads data in helix format from standard input and writes it in solv file format to standard output\&.
 .SH "AUTHOR"
 .sp
 Michael Schroeder <mls@suse\&.de>
