--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 This file contains the major changes between
 libsolv versions:
 
+Version 0.6.26
+- export solvable_matchesdep function, as we now
+  use it in the bindings
+
 Version 0.6.25
 - new features:
   * new SOLVER_FLAG_STRONG_RECOMMENDS flag
