Add another use for extend_to_repo()

--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -5456,7 +5456,7 @@ Create stub repodatas from the information stored in the repodata meta area\&.
 .RE
 .\}
 .sp
-Extend the repodata so that it has the same size as the repo it belongs to\&. This method is only needed when switching to a just written repodata extension to make the repodata match the written extension (which is always of the size of the repo)\&.
+Extend the repodata so that it has the same size as the repo it belongs to\&. This mthod is needed when setting up a new extension repodata so that it matches the repository size\&. It is also needed when switching to a just written repodata extension to make the repodata match the written extension (which is always of the size of the repo)\&.
 .sp
 .if n \{\
 .RS 4
